docs/5.x/data/index.md
---
permalink: /data/
---

# data



* [acm_certificate](acm_certificate.md)
* [acmpca_certificate](acmpca_certificate.md)
* [acmpca_certificate_authority](acmpca_certificate_authority.md)
* [alb](alb.md)
* [alb_listener](alb_listener.md)
* [alb_target_group](alb_target_group.md)
* [ami](ami.md)
* [ami_ids](ami_ids.md)
* [api_gateway_api_key](api_gateway_api_key.md)
* [api_gateway_authorizer](api_gateway_authorizer.md)
* [api_gateway_authorizers](api_gateway_authorizers.md)
* [api_gateway_domain_name](api_gateway_domain_name.md)
* [api_gateway_export](api_gateway_export.md)
* [api_gateway_resource](api_gateway_resource.md)
* [api_gateway_rest_api](api_gateway_rest_api.md)
* [api_gateway_sdk](api_gateway_sdk.md)
* [api_gateway_vpc_link](api_gateway_vpc_link.md)
* [apigatewayv2_api](apigatewayv2_api.md)
* [apigatewayv2_apis](apigatewayv2_apis.md)
* [apigatewayv2_export](apigatewayv2_export.md)
* [apigatewayv2_vpc_link](apigatewayv2_vpc_link.md)
* [appconfig_configuration_profile](appconfig_configuration_profile.md)
* [appconfig_configuration_profiles](appconfig_configuration_profiles.md)
* [appconfig_environment](appconfig_environment.md)
* [appconfig_environments](appconfig_environments.md)
* [appintegrations_event_integration](appintegrations_event_integration.md)
* [appmesh_gateway_route](appmesh_gateway_route.md)
* [appmesh_mesh](appmesh_mesh.md)
* [appmesh_route](appmesh_route.md)
* [appmesh_virtual_gateway](appmesh_virtual_gateway.md)
* [appmesh_virtual_node](appmesh_virtual_node.md)
* [appmesh_virtual_router](appmesh_virtual_router.md)
* [appmesh_virtual_service](appmesh_virtual_service.md)
* [arn](arn.md)
* [athena_named_query](athena_named_query.md)
* [auditmanager_control](auditmanager_control.md)
* [auditmanager_framework](auditmanager_framework.md)
* [autoscaling_group](autoscaling_group.md)
* [autoscaling_groups](autoscaling_groups.md)
* [availability_zone](availability_zone.md)
* [availability_zones](availability_zones.md)
* [backup_framework](backup_framework.md)
* [backup_plan](backup_plan.md)
* [backup_report_plan](backup_report_plan.md)
* [backup_selection](backup_selection.md)
* [backup_vault](backup_vault.md)
* [batch_compute_environment](batch_compute_environment.md)
* [batch_job_queue](batch_job_queue.md)
* [batch_scheduling_policy](batch_scheduling_policy.md)
* [bedrock_foundation_model](bedrock_foundation_model.md)
* [bedrock_foundation_models](bedrock_foundation_models.md)
* [billing_service_account](billing_service_account.md)
* [budgets_budget](budgets_budget.md)
* [caller_identity](caller_identity.md)
* [canonical_user_id](canonical_user_id.md)
* [ce_cost_category](ce_cost_category.md)
* [ce_tags](ce_tags.md)
* [cloudcontrolapi_resource](cloudcontrolapi_resource.md)
* [cloudformation_export](cloudformation_export.md)
* [cloudformation_stack](cloudformation_stack.md)
* [cloudformation_type](cloudformation_type.md)
* [cloudfront_cache_policy](cloudfront_cache_policy.md)
* [cloudfront_distribution](cloudfront_distribution.md)
* [cloudfront_function](cloudfront_function.md)
* [cloudfront_log_delivery_canonical_user_id](cloudfront_log_delivery_canonical_user_id.md)
* [cloudfront_origin_access_identities](cloudfront_origin_access_identities.md)
* [cloudfront_origin_access_identity](cloudfront_origin_access_identity.md)
* [cloudfront_origin_request_policy](cloudfront_origin_request_policy.md)
* [cloudfront_realtime_log_config](cloudfront_realtime_log_config.md)
* [cloudfront_response_headers_policy](cloudfront_response_headers_policy.md)
* [cloudhsm_v2_cluster](cloudhsm_v2_cluster.md)
* [cloudtrail_service_account](cloudtrail_service_account.md)
* [cloudwatch_event_bus](cloudwatch_event_bus.md)
* [cloudwatch_event_connection](cloudwatch_event_connection.md)
* [cloudwatch_event_source](cloudwatch_event_source.md)
* [cloudwatch_log_data_protection_policy_document](cloudwatch_log_data_protection_policy_document.md)
* [cloudwatch_log_group](cloudwatch_log_group.md)
* [cloudwatch_log_groups](cloudwatch_log_groups.md)
* [codeartifact_authorization_token](codeartifact_authorization_token.md)
* [codeartifact_repository_endpoint](codeartifact_repository_endpoint.md)
* [codecatalyst_dev_environment](codecatalyst_dev_environment.md)
* [codecommit_approval_rule_template](codecommit_approval_rule_template.md)
* [codecommit_repository](codecommit_repository.md)
* [codeguruprofiler_profiling_group](codeguruprofiler_profiling_group.md)
* [codestarconnections_connection](codestarconnections_connection.md)
* [cognito_identity_pool](cognito_identity_pool.md)
* [cognito_user_pool_client](cognito_user_pool_client.md)
* [cognito_user_pool_clients](cognito_user_pool_clients.md)
* [cognito_user_pool_signing_certificate](cognito_user_pool_signing_certificate.md)
* [cognito_user_pools](cognito_user_pools.md)
* [connect_bot_association](connect_bot_association.md)
* [connect_contact_flow](connect_contact_flow.md)
* [connect_contact_flow_module](connect_contact_flow_module.md)
* [connect_hours_of_operation](connect_hours_of_operation.md)
* [connect_instance](connect_instance.md)
* [connect_instance_storage_config](connect_instance_storage_config.md)
* [connect_lambda_function_association](connect_lambda_function_association.md)
* [connect_prompt](connect_prompt.md)
* [connect_queue](connect_queue.md)
* [connect_quick_connect](connect_quick_connect.md)
* [connect_routing_profile](connect_routing_profile.md)
* [connect_security_profile](connect_security_profile.md)
* [connect_user](connect_user.md)
* [connect_user_hierarchy_group](connect_user_hierarchy_group.md)
* [connect_user_hierarchy_structure](connect_user_hierarchy_structure.md)
* [connect_vocabulary](connect_vocabulary.md)
* [controltower_controls](controltower_controls.md)
* [cur_report_definition](cur_report_definition.md)
* [customer_gateway](customer_gateway.md)
* [datapipeline_pipeline](datapipeline_pipeline.md)
* [datapipeline_pipeline_definition](datapipeline_pipeline_definition.md)
* [db_cluster_snapshot](db_cluster_snapshot.md)
* [db_event_categories](db_event_categories.md)
* [db_instance](db_instance.md)
* [db_instances](db_instances.md)
* [db_proxy](db_proxy.md)
* [db_snapshot](db_snapshot.md)
* [db_subnet_group](db_subnet_group.md)
* [default_tags](default_tags.md)
* [directory_service_directory](directory_service_directory.md)
* [dms_certificate](dms_certificate.md)
* [dms_endpoint](dms_endpoint.md)
* [dms_replication_instance](dms_replication_instance.md)
* [dms_replication_subnet_group](dms_replication_subnet_group.md)
* [dms_replication_task](dms_replication_task.md)
* [docdb_engine_version](docdb_engine_version.md)
* [docdb_orderable_db_instance](docdb_orderable_db_instance.md)
* [dx_connection](dx_connection.md)
* [dx_gateway](dx_gateway.md)
* [dx_location](dx_location.md)
* [dx_locations](dx_locations.md)
* [dx_router_configuration](dx_router_configuration.md)
* [dynamodb_table](dynamodb_table.md)
* [dynamodb_table_item](dynamodb_table_item.md)
* [ebs_default_kms_key](ebs_default_kms_key.md)
* [ebs_encryption_by_default](ebs_encryption_by_default.md)
* [ebs_snapshot](ebs_snapshot.md)
* [ebs_snapshot_ids](ebs_snapshot_ids.md)
* [ebs_volume](ebs_volume.md)
* [ebs_volumes](ebs_volumes.md)
* [ec2_client_vpn_endpoint](ec2_client_vpn_endpoint.md)
* [ec2_coip_pool](ec2_coip_pool.md)
* [ec2_coip_pools](ec2_coip_pools.md)
* [ec2_host](ec2_host.md)
* [ec2_instance_type](ec2_instance_type.md)
* [ec2_instance_type_offering](ec2_instance_type_offering.md)
* [ec2_instance_type_offerings](ec2_instance_type_offerings.md)
* [ec2_instance_types](ec2_instance_types.md)
* [ec2_local_gateway](ec2_local_gateway.md)
* [ec2_local_gateway_route_table](ec2_local_gateway_route_table.md)
* [ec2_local_gateway_route_tables](ec2_local_gateway_route_tables.md)
* [ec2_local_gateway_virtual_interface](ec2_local_gateway_virtual_interface.md)
* [ec2_local_gateway_virtual_interface_group](ec2_local_gateway_virtual_interface_group.md)
* [ec2_local_gateway_virtual_interface_groups](ec2_local_gateway_virtual_interface_groups.md)
* [ec2_local_gateways](ec2_local_gateways.md)
* [ec2_managed_prefix_list](ec2_managed_prefix_list.md)
* [ec2_managed_prefix_lists](ec2_managed_prefix_lists.md)
* [ec2_network_insights_analysis](ec2_network_insights_analysis.md)
* [ec2_network_insights_path](ec2_network_insights_path.md)
* [ec2_public_ipv4_pool](ec2_public_ipv4_pool.md)
* [ec2_public_ipv4_pools](ec2_public_ipv4_pools.md)
* [ec2_serial_console_access](ec2_serial_console_access.md)
* [ec2_spot_price](ec2_spot_price.md)
* [ec2_transit_gateway](ec2_transit_gateway.md)
* [ec2_transit_gateway_attachment](ec2_transit_gateway_attachment.md)
* [ec2_transit_gateway_attachments](ec2_transit_gateway_attachments.md)
* [ec2_transit_gateway_connect](ec2_transit_gateway_connect.md)
* [ec2_transit_gateway_connect_peer](ec2_transit_gateway_connect_peer.md)
* [ec2_transit_gateway_dx_gateway_attachment](ec2_transit_gateway_dx_gateway_attachment.md)
* [ec2_transit_gateway_multicast_domain](ec2_transit_gateway_multicast_domain.md)
* [ec2_transit_gateway_peering_attachment](ec2_transit_gateway_peering_attachment.md)
* [ec2_transit_gateway_route_table](ec2_transit_gateway_route_table.md)
* [ec2_transit_gateway_route_table_associations](ec2_transit_gateway_route_table_associations.md)
* [ec2_transit_gateway_route_table_propagations](ec2_transit_gateway_route_table_propagations.md)
* [ec2_transit_gateway_route_table_routes](ec2_transit_gateway_route_table_routes.md)
* [ec2_transit_gateway_route_tables](ec2_transit_gateway_route_tables.md)
* [ec2_transit_gateway_vpc_attachment](ec2_transit_gateway_vpc_attachment.md)
* [ec2_transit_gateway_vpc_attachments](ec2_transit_gateway_vpc_attachments.md)
* [ec2_transit_gateway_vpn_attachment](ec2_transit_gateway_vpn_attachment.md)
* [ecr_authorization_token](ecr_authorization_token.md)
* [ecr_image](ecr_image.md)
* [ecr_pull_through_cache_rule](ecr_pull_through_cache_rule.md)
* [ecr_repositories](ecr_repositories.md)
* [ecr_repository](ecr_repository.md)
* [ecrpublic_authorization_token](ecrpublic_authorization_token.md)
* [ecs_cluster](ecs_cluster.md)
* [ecs_container_definition](ecs_container_definition.md)
* [ecs_service](ecs_service.md)
* [ecs_task_definition](ecs_task_definition.md)
* [ecs_task_execution](ecs_task_execution.md)
* [efs_access_point](efs_access_point.md)
* [efs_access_points](efs_access_points.md)
* [efs_file_system](efs_file_system.md)
* [efs_mount_target](efs_mount_target.md)
* [eip](eip.md)
* [eips](eips.md)
* [eks_access_entry](eks_access_entry.md)
* [eks_addon](eks_addon.md)
* [eks_addon_version](eks_addon_version.md)
* [eks_cluster](eks_cluster.md)
* [eks_cluster_auth](eks_cluster_auth.md)
* [eks_clusters](eks_clusters.md)
* [eks_node_group](eks_node_group.md)
* [eks_node_groups](eks_node_groups.md)
* [elastic_beanstalk_application](elastic_beanstalk_application.md)
* [elastic_beanstalk_hosted_zone](elastic_beanstalk_hosted_zone.md)
* [elastic_beanstalk_solution_stack](elastic_beanstalk_solution_stack.md)
* [elasticache_cluster](elasticache_cluster.md)
* [elasticache_replication_group](elasticache_replication_group.md)
* [elasticache_subnet_group](elasticache_subnet_group.md)
* [elasticache_user](elasticache_user.md)
* [elasticsearch_domain](elasticsearch_domain.md)
* [elb](elb.md)
* [elb_hosted_zone_id](elb_hosted_zone_id.md)
* [elb_service_account](elb_service_account.md)
* [emr_release_labels](emr_release_labels.md)
* [emr_supported_instance_types](emr_supported_instance_types.md)
* [emrcontainers_virtual_cluster](emrcontainers_virtual_cluster.md)
* [fsx_ontap_file_system](fsx_ontap_file_system.md)
* [fsx_ontap_storage_virtual_machine](fsx_ontap_storage_virtual_machine.md)
* [fsx_ontap_storage_virtual_machines](fsx_ontap_storage_virtual_machines.md)
* [fsx_openzfs_snapshot](fsx_openzfs_snapshot.md)
* [fsx_windows_file_system](fsx_windows_file_system.md)
* [globalaccelerator_accelerator](globalaccelerator_accelerator.md)
* [globalaccelerator_custom_routing_accelerator](globalaccelerator_custom_routing_accelerator.md)
* [glue_catalog_table](glue_catalog_table.md)
* [glue_connection](glue_connection.md)
* [glue_data_catalog_encryption_settings](glue_data_catalog_encryption_settings.md)
* [glue_script](glue_script.md)
* [grafana_workspace](grafana_workspace.md)
* [guardduty_detector](guardduty_detector.md)
* [guardduty_finding_ids](guardduty_finding_ids.md)
* [iam_access_keys](iam_access_keys.md)
* [iam_account_alias](iam_account_alias.md)
* [iam_group](iam_group.md)
* [iam_instance_profile](iam_instance_profile.md)
* [iam_instance_profiles](iam_instance_profiles.md)
* [iam_openid_connect_provider](iam_openid_connect_provider.md)
* [iam_policy](iam_policy.md)
* [iam_policy_document](iam_policy_document.md)
* [iam_principal_policy_simulation](iam_principal_policy_simulation.md)
* [iam_role](iam_role.md)
* [iam_roles](iam_roles.md)
* [iam_saml_provider](iam_saml_provider.md)
* [iam_server_certificate](iam_server_certificate.md)
* [iam_session_context](iam_session_context.md)
* [iam_user](iam_user.md)
* [iam_user_ssh_key](iam_user_ssh_key.md)
* [iam_users](iam_users.md)
* [identitystore_group](identitystore_group.md)
* [identitystore_user](identitystore_user.md)
* [imagebuilder_component](imagebuilder_component.md)
* [imagebuilder_components](imagebuilder_components.md)
* [imagebuilder_container_recipe](imagebuilder_container_recipe.md)
* [imagebuilder_container_recipes](imagebuilder_container_recipes.md)
* [imagebuilder_distribution_configuration](imagebuilder_distribution_configuration.md)
* [imagebuilder_distribution_configurations](imagebuilder_distribution_configurations.md)
* [imagebuilder_image](imagebuilder_image.md)
* [imagebuilder_image_pipeline](imagebuilder_image_pipeline.md)
* [imagebuilder_image_pipelines](imagebuilder_image_pipelines.md)
* [imagebuilder_image_recipe](imagebuilder_image_recipe.md)
* [imagebuilder_image_recipes](imagebuilder_image_recipes.md)
* [imagebuilder_infrastructure_configuration](imagebuilder_infrastructure_configuration.md)
* [imagebuilder_infrastructure_configurations](imagebuilder_infrastructure_configurations.md)
* [inspector_rules_packages](inspector_rules_packages.md)
* [instance](instance.md)
* [instances](instances.md)
* [internet_gateway](internet_gateway.md)
* [iot_endpoint](iot_endpoint.md)
* [iot_registration_code](iot_registration_code.md)
* [ip_ranges](ip_ranges.md)
* [ivs_stream_key](ivs_stream_key.md)
* [kendra_experience](kendra_experience.md)
* [kendra_faq](kendra_faq.md)
* [kendra_index](kendra_index.md)
* [kendra_query_suggestions_block_list](kendra_query_suggestions_block_list.md)
* [kendra_thesaurus](kendra_thesaurus.md)
* [key_pair](key_pair.md)
* [kinesis_firehose_delivery_stream](kinesis_firehose_delivery_stream.md)
* [kinesis_stream](kinesis_stream.md)
* [kinesis_stream_consumer](kinesis_stream_consumer.md)
* [kms_alias](kms_alias.md)
* [kms_ciphertext](kms_ciphertext.md)
* [kms_custom_key_store](kms_custom_key_store.md)
* [kms_key](kms_key.md)
* [kms_public_key](kms_public_key.md)
* [kms_secret](kms_secret.md)
* [kms_secrets](kms_secrets.md)
* [lakeformation_data_lake_settings](lakeformation_data_lake_settings.md)
* [lakeformation_permissions](lakeformation_permissions.md)
* [lakeformation_resource](lakeformation_resource.md)
* [lambda_alias](lambda_alias.md)
* [lambda_code_signing_config](lambda_code_signing_config.md)
* [lambda_function](lambda_function.md)
* [lambda_function_url](lambda_function_url.md)
* [lambda_functions](lambda_functions.md)
* [lambda_invocation](lambda_invocation.md)
* [lambda_layer_version](lambda_layer_version.md)
* [launch_configuration](launch_configuration.md)
* [launch_template](launch_template.md)
* [lb](lb.md)
* [lb_hosted_zone_id](lb_hosted_zone_id.md)
* [lb_listener](lb_listener.md)
* [lb_target_group](lb_target_group.md)
* [lb_trust_store](lb_trust_store.md)
* [lbs](lbs.md)
* [lex_bot](lex_bot.md)
* [lex_bot_alias](lex_bot_alias.md)
* [lex_intent](lex_intent.md)
* [lex_slot_type](lex_slot_type.md)
* [licensemanager_grants](licensemanager_grants.md)
* [licensemanager_received_license](licensemanager_received_license.md)
* [licensemanager_received_licenses](licensemanager_received_licenses.md)
* [location_geofence_collection](location_geofence_collection.md)
* [location_map](location_map.md)
* [location_place_index](location_place_index.md)
* [location_route_calculator](location_route_calculator.md)
* [location_tracker](location_tracker.md)
* [location_tracker_association](location_tracker_association.md)
* [location_tracker_associations](location_tracker_associations.md)
* [media_convert_queue](media_convert_queue.md)
* [memorydb_acl](memorydb_acl.md)
* [memorydb_cluster](memorydb_cluster.md)
* [memorydb_parameter_group](memorydb_parameter_group.md)
* [memorydb_snapshot](memorydb_snapshot.md)
* [memorydb_subnet_group](memorydb_subnet_group.md)
* [memorydb_user](memorydb_user.md)
* [mq_broker](mq_broker.md)
* [mq_broker_engine_types](mq_broker_engine_types.md)
* [mq_broker_instance_type_offerings](mq_broker_instance_type_offerings.md)
* [msk_bootstrap_brokers](msk_bootstrap_brokers.md)
* [msk_broker_nodes](msk_broker_nodes.md)
* [msk_cluster](msk_cluster.md)
* [msk_configuration](msk_configuration.md)
* [msk_kafka_version](msk_kafka_version.md)
* [msk_vpc_connection](msk_vpc_connection.md)
* [mskconnect_connector](mskconnect_connector.md)
* [mskconnect_custom_plugin](mskconnect_custom_plugin.md)
* [mskconnect_worker_configuration](mskconnect_worker_configuration.md)
* [nat_gateway](nat_gateway.md)
* [nat_gateways](nat_gateways.md)
* [neptune_engine_version](neptune_engine_version.md)
* [neptune_orderable_db_instance](neptune_orderable_db_instance.md)
* [network_acls](network_acls.md)
* [network_interface](network_interface.md)
* [network_interfaces](network_interfaces.md)
* [networkfirewall_firewall](networkfirewall_firewall.md)
* [networkfirewall_firewall_policy](networkfirewall_firewall_policy.md)
* [networkfirewall_resource_policy](networkfirewall_resource_policy.md)
* [networkmanager_connection](networkmanager_connection.md)
* [networkmanager_connections](networkmanager_connections.md)
* [networkmanager_core_network_policy_document](networkmanager_core_network_policy_document.md)
* [networkmanager_device](networkmanager_device.md)
* [networkmanager_devices](networkmanager_devices.md)
* [networkmanager_global_network](networkmanager_global_network.md)
* [networkmanager_global_networks](networkmanager_global_networks.md)
* [networkmanager_link](networkmanager_link.md)
* [networkmanager_links](networkmanager_links.md)
* [networkmanager_site](networkmanager_site.md)
* [networkmanager_sites](networkmanager_sites.md)
* [oam_link](oam_link.md)
* [oam_links](oam_links.md)
* [oam_sink](oam_sink.md)
* [oam_sinks](oam_sinks.md)
* [opensearch_domain](opensearch_domain.md)
* [opensearchserverless_access_policy](opensearchserverless_access_policy.md)
* [opensearchserverless_collection](opensearchserverless_collection.md)
* [opensearchserverless_lifecycle_policy](opensearchserverless_lifecycle_policy.md)
* [opensearchserverless_security_config](opensearchserverless_security_config.md)
* [opensearchserverless_security_policy](opensearchserverless_security_policy.md)
* [opensearchserverless_vpc_endpoint](opensearchserverless_vpc_endpoint.md)
* [organizations_delegated_administrators](organizations_delegated_administrators.md)
* [organizations_delegated_services](organizations_delegated_services.md)
* [organizations_organization](organizations_organization.md)
* [organizations_organizational_unit](organizations_organizational_unit.md)
* [organizations_organizational_unit_child_accounts](organizations_organizational_unit_child_accounts.md)
* [organizations_organizational_unit_descendant_accounts](organizations_organizational_unit_descendant_accounts.md)
* [organizations_organizational_units](organizations_organizational_units.md)
* [organizations_policies](organizations_policies.md)
* [organizations_policies_for_target](organizations_policies_for_target.md)
* [organizations_policy](organizations_policy.md)
* [organizations_resource_tags](organizations_resource_tags.md)
* [outposts_asset](outposts_asset.md)
* [outposts_assets](outposts_assets.md)
* [outposts_outpost](outposts_outpost.md)
* [outposts_outpost_instance_type](outposts_outpost_instance_type.md)
* [outposts_outpost_instance_types](outposts_outpost_instance_types.md)
* [outposts_outposts](outposts_outposts.md)
* [outposts_site](outposts_site.md)
* [outposts_sites](outposts_sites.md)
* [partition](partition.md)
* [polly_voices](polly_voices.md)
* [prefix_list](prefix_list.md)
* [pricing_product](pricing_product.md)
* [prometheus_workspace](prometheus_workspace.md)
* [prometheus_workspaces](prometheus_workspaces.md)
* [qldb_ledger](qldb_ledger.md)
* [quicksight_data_set](quicksight_data_set.md)
* [quicksight_group](quicksight_group.md)
* [quicksight_theme](quicksight_theme.md)
* [quicksight_user](quicksight_user.md)
* [ram_resource_share](ram_resource_share.md)
* [rds_certificate](rds_certificate.md)
* [rds_cluster](rds_cluster.md)
* [rds_clusters](rds_clusters.md)
* [rds_engine_version](rds_engine_version.md)
* [rds_orderable_db_instance](rds_orderable_db_instance.md)
* [rds_reserved_instance_offering](rds_reserved_instance_offering.md)
* [redshift_cluster](redshift_cluster.md)
* [redshift_cluster_credentials](redshift_cluster_credentials.md)
* [redshift_orderable_cluster](redshift_orderable_cluster.md)
* [redshift_service_account](redshift_service_account.md)
* [redshift_subnet_group](redshift_subnet_group.md)
* [redshiftserverless_credentials](redshiftserverless_credentials.md)
* [redshiftserverless_namespace](redshiftserverless_namespace.md)
* [redshiftserverless_workgroup](redshiftserverless_workgroup.md)
* [region](region.md)
* [regions](regions.md)
* [resourcegroupstaggingapi_resources](resourcegroupstaggingapi_resources.md)
* [route](route.md)
* [route53_delegation_set](route53_delegation_set.md)
* [route53_resolver_endpoint](route53_resolver_endpoint.md)
* [route53_resolver_firewall_config](route53_resolver_firewall_config.md)
* [route53_resolver_firewall_domain_list](route53_resolver_firewall_domain_list.md)
* [route53_resolver_firewall_rule_group](route53_resolver_firewall_rule_group.md)
* [route53_resolver_firewall_rule_group_association](route53_resolver_firewall_rule_group_association.md)
* [route53_resolver_firewall_rules](route53_resolver_firewall_rules.md)
* [route53_resolver_query_log_config](route53_resolver_query_log_config.md)
* [route53_resolver_rule](route53_resolver_rule.md)
* [route53_resolver_rules](route53_resolver_rules.md)
* [route53_traffic_policy_document](route53_traffic_policy_document.md)
* [route53_zone](route53_zone.md)
* [route_table](route_table.md)
* [route_tables](route_tables.md)
* [s3_account_public_access_block](s3_account_public_access_block.md)
* [s3_bucket](s3_bucket.md)
* [s3_bucket_object](s3_bucket_object.md)
* [s3_bucket_objects](s3_bucket_objects.md)
* [s3_bucket_policy](s3_bucket_policy.md)
* [s3_directory_buckets](s3_directory_buckets.md)
* [s3_object](s3_object.md)
* [s3_objects](s3_objects.md)
* [s3control_multi_region_access_point](s3control_multi_region_access_point.md)
* [sagemaker_prebuilt_ecr_image](sagemaker_prebuilt_ecr_image.md)
* [secretsmanager_random_password](secretsmanager_random_password.md)
* [secretsmanager_secret](secretsmanager_secret.md)
* [secretsmanager_secret_rotation](secretsmanager_secret_rotation.md)
* [secretsmanager_secret_version](secretsmanager_secret_version.md)
* [secretsmanager_secrets](secretsmanager_secrets.md)
* [security_group](security_group.md)
* [security_groups](security_groups.md)
* [serverlessapplicationrepository_application](serverlessapplicationrepository_application.md)
* [service](service.md)
* [service_discovery_dns_namespace](service_discovery_dns_namespace.md)
* [service_discovery_http_namespace](service_discovery_http_namespace.md)
* [service_discovery_service](service_discovery_service.md)
* [servicecatalog_constraint](servicecatalog_constraint.md)
* [servicecatalog_launch_paths](servicecatalog_launch_paths.md)
* [servicecatalog_portfolio](servicecatalog_portfolio.md)
* [servicecatalog_portfolio_constraints](servicecatalog_portfolio_constraints.md)
* [servicecatalog_product](servicecatalog_product.md)
* [servicecatalog_provisioning_artifacts](servicecatalog_provisioning_artifacts.md)
* [servicequotas_service](servicequotas_service.md)
* [servicequotas_service_quota](servicequotas_service_quota.md)
* [servicequotas_templates](servicequotas_templates.md)
* [ses_active_receipt_rule_set](ses_active_receipt_rule_set.md)
* [ses_domain_identity](ses_domain_identity.md)
* [ses_email_identity](ses_email_identity.md)
* [sesv2_configuration_set](sesv2_configuration_set.md)
* [sesv2_dedicated_ip_pool](sesv2_dedicated_ip_pool.md)
* [sesv2_email_identity](sesv2_email_identity.md)
* [sesv2_email_identity_mail_from_attributes](sesv2_email_identity_mail_from_attributes.md)
* [sfn_activity](sfn_activity.md)
* [sfn_alias](sfn_alias.md)
* [sfn_state_machine](sfn_state_machine.md)
* [sfn_state_machine_versions](sfn_state_machine_versions.md)
* [signer_signing_job](signer_signing_job.md)
* [signer_signing_profile](signer_signing_profile.md)
* [sns_topic](sns_topic.md)
* [sqs_queue](sqs_queue.md)
* [sqs_queues](sqs_queues.md)
* [ssm_document](ssm_document.md)
* [ssm_instances](ssm_instances.md)
* [ssm_maintenance_windows](ssm_maintenance_windows.md)
* [ssm_parameter](ssm_parameter.md)
* [ssm_parameters_by_path](ssm_parameters_by_path.md)
* [ssm_patch_baseline](ssm_patch_baseline.md)
* [ssmcontacts_contact](ssmcontacts_contact.md)
* [ssmcontacts_contact_channel](ssmcontacts_contact_channel.md)
* [ssmcontacts_plan](ssmcontacts_plan.md)
* [ssmincidents_replication_set](ssmincidents_replication_set.md)
* [ssmincidents_response_plan](ssmincidents_response_plan.md)
* [ssoadmin_application](ssoadmin_application.md)
* [ssoadmin_application_assignments](ssoadmin_application_assignments.md)
* [ssoadmin_application_providers](ssoadmin_application_providers.md)
* [ssoadmin_instances](ssoadmin_instances.md)
* [ssoadmin_permission_set](ssoadmin_permission_set.md)
* [ssoadmin_principal_application_assignments](ssoadmin_principal_application_assignments.md)
* [storagegateway_local_disk](storagegateway_local_disk.md)
* [subnet](subnet.md)
* [subnets](subnets.md)
* [transfer_server](transfer_server.md)
* [verifiedpermissions_policy_store](verifiedpermissions_policy_store.md)
* [vpc](vpc.md)
* [vpc_dhcp_options](vpc_dhcp_options.md)
* [vpc_endpoint](vpc_endpoint.md)
* [vpc_endpoint_service](vpc_endpoint_service.md)
* [vpc_ipam_pool](vpc_ipam_pool.md)
* [vpc_ipam_pool_cidrs](vpc_ipam_pool_cidrs.md)
* [vpc_ipam_pools](vpc_ipam_pools.md)
* [vpc_ipam_preview_next_cidr](vpc_ipam_preview_next_cidr.md)
* [vpc_peering_connection](vpc_peering_connection.md)
* [vpc_peering_connections](vpc_peering_connections.md)
* [vpc_security_group_rule](vpc_security_group_rule.md)
* [vpc_security_group_rules](vpc_security_group_rules.md)
* [vpclattice_auth_policy](vpclattice_auth_policy.md)
* [vpclattice_listener](vpclattice_listener.md)
* [vpclattice_resource_policy](vpclattice_resource_policy.md)
* [vpclattice_service](vpclattice_service.md)
* [vpclattice_service_network](vpclattice_service_network.md)
* [vpcs](vpcs.md)
* [vpn_gateway](vpn_gateway.md)
* [waf_ipset](waf_ipset.md)
* [waf_rate_based_rule](waf_rate_based_rule.md)
* [waf_rule](waf_rule.md)
* [waf_subscribed_rule_group](waf_subscribed_rule_group.md)
* [waf_web_acl](waf_web_acl.md)
* [wafregional_ipset](wafregional_ipset.md)
* [wafregional_rate_based_rule](wafregional_rate_based_rule.md)
* [wafregional_rule](wafregional_rule.md)
* [wafregional_subscribed_rule_group](wafregional_subscribed_rule_group.md)
* [wafregional_web_acl](wafregional_web_acl.md)
* [wafv2_ip_set](wafv2_ip_set.md)
* [wafv2_regex_pattern_set](wafv2_regex_pattern_set.md)
* [wafv2_rule_group](wafv2_rule_group.md)
* [wafv2_web_acl](wafv2_web_acl.md)
* [workspaces_bundle](workspaces_bundle.md)
* [workspaces_directory](workspaces_directory.md)
* [workspaces_image](workspaces_image.md)
* [workspaces_workspace](workspaces_workspace.md)